--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="webgl"></div>
+    <audio src="../static/assets/toyMoveSound.mp3" id="audio"></audio>
     <div id="root"></div>
 </body>
 </html>
