--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="webgl"></div>
+    <video id="video" loop muted autoplay></video>
     <div id="root"></div>
 </body>
 </html>
