add new presets

--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,14 @@
 </head>
 <body>
     <div class="webgl"></div>
-    <video id="video1" loop muted autoplay></video>
-    <video id="video2" loop muted autoplay></video>
-    <video id="video3" loop muted autoplay></video>
-    <video id="video4" loop muted autoplay></video>
-    <video id="video5" loop muted autoplay></video>
-    <video id="video6" loop muted autoplay></video>
+    <div class="videos-container">
+        <video id="video1" loop muted autoplay></video>
+        <video id="video2" loop muted autoplay></video>
+        <video id="video3" loop muted autoplay></video>
+        <video id="video4" loop muted autoplay></video>
+        <video id="video5" loop muted autoplay></video>
+        <video id="video6" loop muted autoplay></video>
+    </div>
     <div id="root"></div>
 </body>
 </html>
